--- a/index.html
+++ b/index.html
@@ -1,71 +1,60 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <head>
-        <title>CharaChorder Utilities - Home</title>
-        <meta name="description" content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
-        <meta property="og:title" content="CharaChorder Utilities - Home">
-        <meta property="og:description" content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
-      </head>
-      
+    <title>CharaChorder Utilities - Home</title>
+    <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <meta property="og:title" content="CharaChorder Utilities">
+    <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <script src="js/main.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>CharaChorder Utilities</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="count.html">Count Bigrams</a></li>
-                <li><a href="stats.html">Chord Stats</a></li>
-                <li><a href="chordfinder.html">ChordFinder</a></li>
-                <li><a href="partialanagrams.html">Anagrams</a></li>
-                <li><a href="practice.html">Practice</a></li>
-                <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
-            </ul>
-        </nav>
-    </header>
-    <ul>
-        <li>
-            <a href="count.html">Count Bigrams</a>
-            <ul>
-                <li>This tool helps you find two letter chords that are infrequently occuring in words so that you don't
-                    accidentally trigger chords.</li>
-            </ul>
-        </li>
-        <li>
-            <a href="stats.html">Chord Statistics</a>
-            <ul>
-                <li>This tool looks at your uploaded chord map and provides some statistics (number of chords, breakdown by number of letters 2 letter/3 letter ... etc.)</li>
-            </ul>
-        </li>
-        <li>
-            <a href="chordfinder.html">ChordFinder</a>
-            <ul>
-                <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the text that you don't have chords for.</li>
-            </ul>
-        </li>
-        <li>
-            <a href="partialanagrams.html">Anagrams</a>
-            <ul>
-                <li>This tool looks at a text and identifies all of the partial anagrams. Partial anagrams (like tough and thought) are usually words that you need special attention to for choosing chord maps since they share the same overall letters.</li>
-            </ul>
-        </li>
-        <li>
-            <a href="practice.html">Practice</a>
-            <ul>
-                <li>This tool will take your uploaded CSV chord file and copy a string into your clipboard for practicing in Monkeytype or <a href="https://charatyping.com/">CharaTyping</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="chord-generator.html">CC1 Chord Generator</a>
-            <ul>
-                <li>This tool will take an uploaded text file of words and attempt to generate a chord library file for them using a variety of rules.  Originally from https://github.com/bittujoju/charachorder</li>
-            </ul>
-        </li>
-    </ul>
+    <header></header>
+    <div class="main-content">
+        <h1>CharaChorder Utilities - Home</h1>
+        <ul>
+            <li>
+                <a href="count.html">Count Bigrams</a>
+                <ul>
+                    <li>This tool helps you find two letter chords that are infrequently occuring in words so that you don't
+                        accidentally trigger chords.</li>
+                </ul>
+            </li>
+            <li>
+                <a href="stats.html">Chord Statistics</a>
+                <ul>
+                    <li>This tool looks at your uploaded chord map and provides some statistics (number of chords, breakdown by number of letters 2 letter/3 letter ... etc.)</li>
+                </ul>
+            </li>
+            <li>
+                <a href="chordfinder.html">ChordFinder</a>
+                <ul>
+                    <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the text that you don't have chords for.</li>
+                </ul>
+            </li>
+            <li>
+                <a href="partialanagrams.html">Anagrams</a>
+                <ul>
+                    <li>This tool looks at a text and identifies all of the partial anagrams. Partial anagrams (like tough and thought) are usually words that you need special attention to for choosing chord maps since they share the same overall letters.</li>
+                </ul>
+            </li>
+            <li>
+                <a href="practice.html">Practice</a>
+                <ul>
+                    <li>This tool will take your uploaded CSV chord file and either copy a string into your clipboard for practicing in Monkeytype or <a href="https://charatyping.com/">CharaTyping</a> or let you practice right on the page with chord hints.</li>
+                </ul>
+            </li>
+            <li>
+                <a href="chord-generator.html">CC1 Chord Generator</a>
+                <ul>
+                    <li>This tool will take an uploaded text file of words or list of words typed in and attempt to generate a chord library file for them using a variety of rules.  Originally from https://github.com/bittujoju/charachorder</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
