--- a/chord-generator.html
+++ b/chord-generator.html
@@ -2,121 +2,111 @@
 <html>
 
 <head>
-    <title>CharaChorder Utilities - CC1 Chord Library</title>
-    <meta name="description"
-        content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
-    <meta property="og:title" content="CharaChorder Utilities - Home">
-    <meta property="og:description"
-        content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
+    <title>CharaChorder One Chord Generator</title>
+    <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <meta property="og:title" content="CharaChorder One Chord Generator">
+    <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <script src="js/main.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>CharaChorder Utilities</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="count.html">Count Bigrams</a></li>
-                <li><a href="stats.html">Chord Stats</a></li>
-                <li><a href="chordfinder.html">ChordFinder</a></li>
-                <li><a href="partialanagrams.html">Anagrams</a></li>
-                <li><a href="practice.html">Practice</a></li>
-                <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
-            </ul>
-        </nav>
-    </header>
-    </br>
-    <form>
-        <div style="display: flex; align-items: center; justify-content: center;">
-            <input type="text" id="textInput" placeholder="Enter word(s) here" />
-            <div class="tooltip">
-                <i>ⓘ</i>
-                <span class="tooltiptext">
-                    You can type individual words here separated by a comma sorted by priority order (ie words at the
-                    beginning of
-                    the list get preference to shorter chord inputs).
-                </span>
+    <header></header>
+    <div class="main-content">
+        <h1>CharaChorder One Chord Generator</h1>
+        <form>
+            <div style="display: flex; align-items: center; justify-content: center;">
+                <input type="text" id="textInput" placeholder="Enter word(s) here" />
+                <div class="tooltip">
+                    <i>ⓘ</i>
+                    <span class="tooltiptext">
+                        You can type individual words here separated by a comma sorted by priority order (ie words at
+                        the
+                        beginning of
+                        the list get preference to shorter chord inputs).
+                    </span>
+                </div>
             </div>
-        </div>
-        <p id="or-label" style="text-align: center;">OR</p>
-        <div>
-            <label for="wordFileInput" class="fileInputContainer">
-                Upload Words
-            </label>
-            <input type="file" id="wordFileInput" style="display: none;" />
-            <div id="wordFileInputName" style="display: inline-block;"></div>
-            <div class="tooltip">
-                <i>ⓘ</i>
-                <span class="tooltiptext">
-                    To use this tool, upload a .txt file with words, each one on its own line, sorted by priority order
-                    (ie
-                    words at the top of the list get preference to shorter chord inputs).
-                </span>
+            <p id="or-label" style="text-align: center;">OR</p>
+            <div>
+                <label for="wordFileInput" class="fileInputContainer">
+                    Upload Words
+                </label>
+                <input type="file" id="wordFileInput" style="display: none;" />
+                <div id="wordFileInputName" style="display: inline-block;"></div>
+                <div class="tooltip">
+                    <i>ⓘ</i>
+                    <span class="tooltiptext">
+                        To use this tool, upload a .txt file with words, each one on its own line, sorted by priority
+                        order
+                        (ie
+                        words at the top of the list get preference to shorter chord inputs).
+                    </span>
+                </div>
             </div>
-        </div>
-        <div>
-            <label for="chordFileInput" class="fileInputContainer">
-                Upload Chords
-            </label>
-            <input type="file" id="chordFileInput" style="display: none;" />
-            <div id="chordFileInputName" style="display: inline-block;"></div>
-            <div class="tooltip">
-                <i>ⓘ</i>
-                <span class="tooltiptext">
-                    Upload existing chord library(.csv) optionally to not conflict generated chords with existing chords
-                    in
-                    your library.
-                </span>
+            <div>
+                <label for="chordFileInput" class="fileInputContainer">
+                    Upload Chords
+                </label>
+                <input type="file" id="chordFileInput" style="display: none;" />
+                <div id="chordFileInputName" style="display: inline-block;"></div>
+                <div class="tooltip">
+                    <i>ⓘ</i>
+                    <span class="tooltiptext">
+                        Upload existing chord library(.csv) optionally to not conflict generated chords with existing
+                        chords
+                        in
+                        your library.
+                    </span>
+                </div>
             </div>
-        </div>
 
-        <div>Select number of chord keys</div>
-        <div id="slider-range"></div>
-        <div id="selected-values">Selected range: 3 - 6</div>
+            <div>Select number of chord keys</div>
+            <div id="slider-range"></div>
+            <div id="selected-values">Selected range: 3 - 6</div>
 
-        <div id="toggles">
-            <label class="switch" style="margin-top: 5%;">
-                <input type="checkbox" id="useDupKey" name="useDupKey" checked>
-                <span class="toggle"></span>
-            </label>
-            <label class="toggle-label" for="useDupKey">Use Dup Key</label><br>
+            <div id="toggles">
+                <label class="switch" style="margin-top: 5%;">
+                    <input type="checkbox" id="useDupKey" name="useDupKey" checked>
+                    <span class="toggle"></span>
+                </label>
+                <label class="toggle-label" for="useDupKey">Use Dup Key</label><br>
 
-            <label class="switch">
-                <input type="checkbox" id="useMirroredKeys" name="useMirroredKeys" checked>
-                <span class="toggle"></span>
-            </label>
-            <label class="toggle-label" for="useMirroredKeys">Use Mirrored Keys</label><br>
+                <label class="switch">
+                    <input type="checkbox" id="useMirroredKeys" name="useMirroredKeys" checked>
+                    <span class="toggle"></span>
+                </label>
+                <label class="toggle-label" for="useMirroredKeys">Use Mirrored Keys</label><br>
 
-            <label class="switch">
-                <input type="checkbox" id="useAltKeys" name="useAltKeys" checked>
-                <span class="toggle"></span>
-            </label>
-            <label class="toggle-label" for="useAltKeys">Use Alternate Keys</label><br>
+                <label class="switch">
+                    <input type="checkbox" id="useAltKeys" name="useAltKeys" checked>
+                    <span class="toggle"></span>
+                </label>
+                <label class="toggle-label" for="useAltKeys">Use Alternate Keys</label><br>
 
-            <label class="switch">
-                <input type="checkbox" id="use3dKeys" name="use3dKeys">
-                <span class="toggle"></span>
-            </label>
-            <label class="toggle-label" for="use3dKeys">Use 3D Keys</label><br>
+                <label class="switch">
+                    <input type="checkbox" id="use3dKeys" name="use3dKeys">
+                    <span class="toggle"></span>
+                </label>
+                <label class="toggle-label" for="use3dKeys">Use 3D Keys</label><br>
 
-            <label class="switch">
-                <input type="checkbox" id="createCsv" name="createCsv">
-                <span class="toggle"></span>
-            </label>
-            <label class="toggle-label" for="createCsv">Create CSV</label><br>
-        </div>
-
-        <button type="button" onclick="generateChords()">Generate Chords</button>
-        <div id="progress-container">
-            <div id="progress-bar">
+                <label class="switch">
+                    <input type="checkbox" id="createCsv" name="createCsv">
+                    <span class="toggle"></span>
+                </label>
+                <label class="toggle-label" for="createCsv">Create CSV</label><br>
             </div>
-        </div>
-        <div id="progress-label"></div>
-        <div id="output-chord"></div>
-    </form>
 
+            <button type="button" onclick="generateChords()">Generate Chords</button>
+            <div id="progress-container">
+                <div id="progress-bar">
+                </div>
+            </div>
+            <div id="progress-label"></div>
+            <div id="output-chord"></div>
+        </form>
+    </div>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
