--- a/chordfinder.html
+++ b/chordfinder.html
@@ -1,58 +1,51 @@
 <!DOCTYPE html>
 <html>
-
+    
 <head>
     <title>Missing Chords</title>
+    <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <meta property="og:title" content="Missing Chords">
+    <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+    <script src="js/main.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://unpkg.com/compromise"></script>
 </head>
 
 <body>
-    <header>
-        <h1>CharaChorder Utilities</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="count.html">Count Bigrams</a></li>
-                <li><a href="stats.html">Chord Stats</a></li>
-                <li><a href="chordfinder.html">ChordFinder</a></li>
-                <li><a href="partialanagrams.html">Anagrams</a></li>
-                <li><a href="practice.html">Practice</a></li>
-                <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1>ChordFinder</h1>
-    <p>This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as emails
-        export or chat export or other writing)
-        and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your
-        chord map never leaves your browser. Also, because
-        processing is all done in your client performance could be heavily influenced by your computer. Long text may
-        take a while to lemmatize.
-    </p>
-    <p>Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency, representing the total number of characters in the text.</p>
-    <form>
-        <label>
-            Chord CSV file
-            <input type="file" id="input-file" accept=".csv" />
-        </label>
-        <br />
-        <label for="textarea">Text to analyze:</label><br>
-        <textarea id="textarea" rows="10" cols="40"></textarea><br>
-        <label for="minReps">Enter a mininum frequency to filter the table by:</label>
-        <input id="minReps" type="number" value="5">
-        <br />
-        <label>
-            Attempt lemmatization of words?
-            <input type="checkbox" id="lemmatization" />
-        </label>
-        <br />
-        <button type="button" onclick="findMissingChords()">Find Chords</button>
-    </form>
-    <div id="results"></div>
-    <div id="phrases"></div>
+    <header></header>
+    <div class="main-content">
+        <h1>ChordFinder</h1>
+        <p>This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as emails
+            export or chat export or other writing)
+            and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your
+            chord map never leaves your browser. Also, because
+            processing is all done in your client performance could be heavily influenced by your computer. Long text may
+            take a while to lemmatize.
+        </p>
+        <p>Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency, representing the total number of characters in the text.</p>
+        <form>
+            <label>
+                Chord CSV file
+                <input type="file" id="input-file" accept=".csv" />
+            </label>
+            <br />
+            <label for="textarea">Text to analyze:</label><br>
+            <textarea id="textarea" rows="10" cols="40"></textarea><br>
+            <label for="minReps">Enter a mininum frequency to filter the table by:</label>
+            <input id="minReps" type="number" value="5">
+            <br />
+            <label>
+                Attempt lemmatization of words?
+                <input type="checkbox" id="lemmatization" />
+            </label>
+            <br />
+            <button type="button" onclick="findMissingChords()">Find Chords</button>
+        </form>
+        <div id="results"></div>
+        <div id="phrases"></div>
+    </div>
     <script type='text/javascript' src='js/count.js'></script>
     <script type='text/javascript' src='js/missing.js'></script>
     <script type='text/javascript' src='js/downloadTable.js'></script>
+    <script src="https://unpkg.com/compromise"></script>
 </html>
