--- a/stats.html
+++ b/stats.html
@@ -1,44 +1,38 @@
-<!-- index.html -->
+<!DOCTYPE html>
 <html>
 
 <head>
   <title>CharaChorder Chord Stats</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+  <meta property="og:title" content="CharaChorder Chord Stats">
+  <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
+  <script src="js/main.js"></script>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header>
-    <h1 class="main-h1">CharaChorder Utilities</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="count.html">Count Bigrams</a></li>
-        <li><a href="stats.html">Chord Stats</a></li>
-        <li><a href="chordfinder.html">ChordFinder</a></li>
-        <li><a href="partialanagrams.html">Anagrams</a></li>
-        <li><a href="practice.html">Practice</a></li>
-        <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
-      </ul>
-    </nav>
-  </header>
-  <h1>CharaChorder Chord Stats</h1>
-  <p class="note">
-  <ul>
-    <li><b>Note:</b> everything is done client-side and your chord map never leaves your browser.</li>
-  </ul>
-  </li>
-  <form id="stats-form">
-    <label>
-      Chord CSV file
-      <input type="file" id="input-file" accept=".csv" />
-    </label>
-    <button id="calculateStats" type="button">Calculate Stats</button>
-  </form>
-  </br>
-  <div id="stats">Browse for your chord csv export and click calculate stats</div>
+  <header></header>
+  <div class="main-content">
+    <h1>CharaChorder Chord Stats</h1>
+    <p class="note">
+    <ul>
+      <li><b>Note:</b> everything is done client-side and your chord map never leaves your browser.</li>
+    </ul>
+    </p>
+    <form id="stats-form">
+      <label>
+        Chord CSV file
+        <input type="file" id="input-file" accept=".csv" />
+      </label>
+      <button id="calculateStats" type="button">Calculate Stats</button>
+    </form>
+    </br>
+    <div id="stats">Browse for your chord csv export and click calculate stats</div>
+  </div>
   <script type='text/javascript' src="js/stats.js"></script>
   <script type='text/javascript' src='js/downloadTable.js'></script>
 </body>
