--- a/header.html
+++ b/header.html
@@ -8,5 +8,6 @@
         <li><a href="partialanagrams.html">Anagrams</a></li>
         <li><a href="practice.html">Practice</a></li>
         <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
+        <li><a href="diagnostic.html">Chord Timing Diagnostic</a></li>
     </ul>
 </nav>
