--- a/chordfinder.html
+++ b/chordfinder.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
-    <title>Missing Chords</title>
+    <title>Chord Finder</title>
     <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
-    <meta property="og:title" content="Missing Chords">
+    <meta property="og:title" content="Chord Finder">
     <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
     <script src="js/main.js"></script>
     <meta charset="UTF-8">
@@ -14,15 +14,24 @@
 <body>
     <header></header>
     <div class="main-content">
-        <h1>ChordFinder</h1>
-        <p>This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as emails
+        <h1>Chord Finder</h1>
+        <details>
+            <summary>How to use:</summary>
+            This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as
+            emails
             export or chat export or other writing)
-            and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your
+            and then shows you words in the text you haven't created chords for (based on the csv you give it). Note:
+            your
             chord map never leaves your browser. Also, because
-            processing is all done in your client performance could be heavily influenced by your computer. Long text may
+            processing is all done in your client performance could be heavily influenced by your computer. Long text
+            may
             take a while to lemmatize.
-        </p>
-        <p>Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency, representing the total number of characters in the text.</p>
+            <br><br>
+            Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency,
+            representing
+            the total number of characters in the text.
+        </details>
+        <br>
         <form>
             <label>
                 Chord CSV file
@@ -48,4 +57,5 @@
     <script type='text/javascript' src='js/missing.js'></script>
     <script type='text/javascript' src='js/downloadTable.js'></script>
     <script src="https://unpkg.com/compromise"></script>
+
 </html>
