--- a/header.html
+++ b/header.html
@@ -2,12 +2,12 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="count.html">Count Bigrams</a></li>
-        <li><a href="stats.html">Chord Stats</a></li>
-        <li><a href="chordfinder.html">ChordFinder</a></li>
-        <li><a href="partialanagrams.html">Anagrams</a></li>
-        <li><a href="practice.html">Practice</a></li>
-        <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
-        <li><a href="diagnostic.html">Chord Timing Diagnostic</a></li>
+        <li><a href="count.html">Calculate Bigram Frequency</a></li>
+        <li><a href="stats.html">Chord Statistics</a></li>
+        <li><a href="chordfinder.html">Chord Finder</a></li>
+        <li><a href="partialanagrams.html">Partial Anagrams</a></li>
+        <li><a href="practice.html">CharaChorder Practice</a></li>
+        <li><a href="chord-generator.html">CharaChorder One Chord Generator</a></li>
+        <li><a href="diagnostic.html">Chord Timing Diagnostic Tool</a></li>
     </ul>
 </nav>
