--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>CharaChorder Utilities - Home</h1>
         <ul>
             <li>
-                <a href="count.html">Count Bigrams</a>
+                <a href="count.html">Calculate Bigram Frequency</a>
                 <ul>
                     <li>This tool helps you find two letter chords that are infrequently occuring in words so that you
                         don't
@@ -32,14 +32,14 @@
                 </ul>
             </li>
             <li>
-                <a href="chordfinder.html">ChordFinder</a>
+                <a href="chordfinder.html">Chord Finder</a>
                 <ul>
                     <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the
                         text that you don't have chords for.</li>
                 </ul>
             </li>
             <li>
-                <a href="partialanagrams.html">Anagrams</a>
+                <a href="partialanagrams.html">Partial Anagrams</a>
                 <ul>
                     <li>This tool looks at a text and identifies all of the partial anagrams. Partial anagrams (like
                         tough and thought) are usually words that you need special attention to for choosing chord maps
@@ -47,7 +47,7 @@
                 </ul>
             </li>
             <li>
-                <a href="practice.html">Practice</a>
+                <a href="practice.html">CharaChorder Practice</a>
                 <ul>
                     <li>This tool will take your uploaded CSV chord file and either copy a string into your clipboard
                         for practicing in Monkeytype or <a href="https://charatyping.com/">CharaTyping</a> or let you
@@ -55,7 +55,7 @@
                 </ul>
             </li>
             <li>
-                <a href="chord-generator.html">CC1 Chord Generator</a>
+                <a href="chord-generator.html">CharaChorder One Chord Generator</a>
                 <ul>
                     <li>This tool will take an uploaded text file of words or list of words typed in and attempt to
                         generate a chord library file for them using a variety of rules. Originally from
@@ -63,7 +63,7 @@
                 </ul>
             </li>
             <li>
-                <a href="diagnostic.html">Chord Timing Diagnostic</a>
+                <a href="diagnostic.html">Chord Timing Diagnostic Tool</a>
                 <ul>
                     <li>
                         Sometimes it can be helpful to try to look closer at the timing that you are pressing and
