--- a/partialanagrams.html
+++ b/partialanagrams.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
     <title>Partial Anagrams</title>
     <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
@@ -15,8 +15,15 @@
     <header></header>
     <div class="main-content">
         <h1>Partial Anagrams</h1>
-        <p>This utility helps you find partial anagrams which are often the chords you need to pay attention to because they
-            share the same unique letters (for example: tough, though, and thought).  Often you can use the Dup key to distinguish these, or some other mnemonic (tuf for tough).
+        <details>
+            <summary>How to use:</summary>
+            This utility helps you find partial anagrams which are often the chords you need to pay attention to because
+            they
+            share the same unique letters (for example: tough, though, and thought). Often you can use the Dup key to
+            distinguish these, or some other mnemonic (tuf for tough).
+        </details>
+        <br>
+        <p>
         </p>
         <form>
             <label for="textarea">Text to analyze:</label><br>
@@ -28,4 +35,5 @@
     </div>
     <script type='text/javascript' src='js/partial.js'></script>
     <script type='text/javascript' src='js/downloadTable.js'></script>
+
 </html>
