--- a/stats.html
+++ b/stats.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>CharaChorder Chord Stats</title>
+  <title>Chord Statistics</title>
   <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
-  <meta property="og:title" content="CharaChorder Chord Stats">
+  <meta property="og:title" content="Chord Statistics">
   <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users.">
   <script src="js/main.js"></script>
   <meta charset="UTF-8">
@@ -17,12 +17,13 @@
 <body>
   <header></header>
   <div class="main-content">
-    <h1>CharaChorder Chord Stats</h1>
-    <p class="note">
-    <ul>
-      <li><b>Note:</b> everything is done client-side and your chord map never leaves your browser.</li>
-    </ul>
-    </p>
+    <h1>Chord Statistics</h1>
+    <details>
+      <summary>How to use:</summary>
+      <b>Note:</b> everything is done client-side and your chord map never leaves your browser.
+      </br>
+      Upload your chord csv file exported from Dot I/O <a href="https://www.iq-eq.io/#/manager">here</a>.
+    </details>
     <form id="stats-form">
       <label>
         Chord CSV file
