Small consistency changes

--- a/chordfinder.html
+++ b/chordfinder.html
@@ -18,18 +18,13 @@
         <details>
             <summary>How to use:</summary>
             This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as
-            emails
-            export or chat export or other writing)
-            and then shows you words in the text you haven't created chords for (based on the csv you give it). Note:
-            your
-            chord map never leaves your browser. Also, because
+            emails export or chat export or other writing) and then shows you words in the text you haven't created
+            chords for (based on the csv you give it). Note: your chord map never leaves your browser. Also, because
             processing is all done in your client performance could be heavily influenced by your computer. Long text
-            may
-            take a while to lemmatize.
+            may take a while to lemmatize.
             <br><br>
             Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency,
-            representing
-            the total number of characters in the text.
+            representing the total number of characters in the text.
         </details>
         <br>
         <form>
