--- a/practice.html
+++ b/practice.html
@@ -25,7 +25,7 @@
       <summary>How to use:</summary>
       <b>Note:</b> everything is done client-side and your chord map never leaves your browser.
       </br>
-      Upload your chord csv file exported from Dot I/O <a href="https://www.iq-eq.io/#/manager">here</a>.
+      Upload your chord csv file exported from <a href="https://www.iq-eq.io/#/manager">Dot I/O</a>.
       <br>
       Click "Copy to clipboard for practice". Paste into the "Custom" section
       of <a href="https://monkeytype.com/">monkeytype</a> or <a href="https://charatyping.com/">CharaTyping</a> and make sure to check the "Pipe Delimiter"
