--- a/stats.html
+++ b/stats.html
@@ -22,7 +22,7 @@
       <summary>How to use:</summary>
       <b>Note:</b> everything is done client-side and your chord map never leaves your browser.
       </br>
-      Upload your chord csv file exported from Dot I/O <a href="https://www.iq-eq.io/#/manager">here</a>.
+      Upload your chord csv file exported from <a href="https://www.iq-eq.io/#/manager">Dot I/O</a>.
     </details>
     <form id="stats-form">
       <label>
